[package]
authors = ["Clemens Winter <clemenswinter1@gmail.com>"]
description = "Embeddable high-performance analytics database."
edition = "2021"
license-file = "LICENSE"
name = "locustdb"
version = "0.4.2"
repository = "https://github.com/cswinter/LocustDB"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
actix-web = "4"
actix-cors = "0.6"
aliasmethod = "0.1"
bit-vec = "0.4"
byteorder = "1.2"
chrono = "0.4"
clap = "2.32"
csv = "1"
env_logger = "0.5"
failure = "0.1"
failure_derive = "0.1"
flate2 = "1.0"
fnv = "1.0"
futures = "0.3"
hex = "0.3"
itertools = "0.5"
lazy_static = "1.4.0"
locustdb-derive = {path = "./locustdb-derive", version = "0.2.0"}
locustdb-compression-utils = {path = "./locustdb-compression-utils", version = "0.1.0"}
log = {features = ["max_level_trace", "release_max_level_debug"], version = "0.4"}
lru = "0.12"
lz4 = {version = "1.22.0", optional = true}
num = "0.4"
num_cpus = "1.0"
rand = "0.5"
regex = "1"
blake2 = "0.10"
rustyline = "1.0"
scoped_threadpool = "0.1"
seahash = "3.0"
sqlparser = "0.38"
std-semaphore = "0.1"
structopt = "0.3"
tempfile = "3"
time = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1"
reqwest = { version = "0.11", default_features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
systemstat = "0.1.8"
pyo3 = {features = ["extension-module"], version = "0.19", optional = true}
ordered-float = { version = "3", features = ["serde"] }
unicode-width = "0.1"
unicode-segmentation = "1"
bincode = "1.3"
random_word = { version = "0.4", features = ["en"] }
sha2 = "0.10"
walkdir = "2.4.0"

[dev-dependencies]
pretty_assertions = "1"

[features]
default = []
enable_lz4 = ["lz4"]
python = ["pyo3"]


[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = 3
