[package]
authors = ["Clemens Winter <clemenswinter1@gmail.com>"]
description = "Embeddable high-performance analytics database."
edition = "2021"
license-file = "LICENSE"
name = "locustdb"
version = "0.5.0"
repository = "https://github.com/cswinter/LocustDB"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
actix-cors = "0.6"
actix-web = "4"
aliasmethod = "0.1"
azure_core = { version = "0.19.0", features = ["enable_reqwest_rustls"], default-features = false }
azure_identity = { version = "0.19.0", features = ["enable_reqwest_rustls"], default-features = false }
azure_storage = { version = "0.19.0", features = ["enable_reqwest_rustls"], default-features = false }
azure_storage_blobs = { version = "0.19.0", features = ["enable_reqwest_rustls"], default-features = false }
bit-vec = "0.4"
blake2 = "0.10"
byteorder = "1.2"
capnp = "0.19"
chrono = "0.4"
clap = "2.32"
csv = "1"
env_logger = "0.5"
failure = "0.1"
failure_derive = "0.1"
flate2 = "1.0"
fnv = "1.0"
futures = "0.3"
google-cloud-storage = { version = "0.16", features = ["rustls-tls", "auth"], default-features = false }
hex = "0.3"
itertools = "0.5"
lazy_static = "1.4.0"
locustdb-compression-utils = {path = "./locustdb-compression-utils", version = "0.2.0"}
locustdb-derive = {path = "./locustdb-derive", version = "0.2.1"}
locustdb-serialization = {path = "./locustdb-serialization", version = "0.2.0"}
log = {features = ["max_level_trace", "release_max_level_debug"], version = "0.4"}
lru = "0.12"
lz4_flex = { version = "0.11" }
num = "0.4"
num_cpus = "1.0"
ordered-float = { version = "3", features = ["serde"] }
pco = "0.2.3"
pyo3 = {features = ["extension-module"], version = "0.21", optional = true}
rand = "0.5"
random_word = { version = "0.4", features = ["en", "fr", "de"] }
regex = "1"
reqwest = { version = "0.11", default_features = false, features = ["json", "rustls-tls"] }
rustyline = "1.0"
scoped_threadpool = "0.1"
seahash = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlparser = "0.38"
std-semaphore = "0.1"
structopt = "0.3"
systemstat = "0.1.8"
tempfile = "3"
tera = "1"
time = "0.2"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
unicode-segmentation = "1"
unicode-width = "0.1"
walkdir = "2.4.0"

[dev-dependencies]
pretty_assertions = "1"

[features]
default = []
python = ["pyo3"]


[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = 3
