[package]
name = "locustdb-client"
version = "0.4.2"
authors = ["Clemens Winter <clemenswinter1@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
reqwest = { version = "0.12", default_features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.42"
locustdb-compression-utils = {path = "../locustdb-compression-utils", version = "0.1.0"}
bincode = "1.3"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
web-sys = { version = "0.3.69", features = ["Performance", "Window"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
debug = true
