[package]
name = "locustdb-compression-utils"
version = "0.2.0"
edition = "2021"
description = "Utilities for compressing and decompressing sequences used in LocustDB."
license-file = "../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
bitbuffer = "0.10"
pco = "0.2.3"

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
rand = { version = "0.8.5", features = ["small_rng"] }
pretty_assertions = "1"

[profile.release]
debug = true

[profile.dev]
debug = true
