[package]
authors = ["Clemens Winter <clemenswinter1@gmail.com>"]
description = "Macros used internally by locustdb crate."
edition = "2018"
license = "Apache-2.0"
name = "locustdb-derive"
version = "0.2.1"
[dependencies]
lazy_static = "1.2"
proc-macro2 = {version = "1.0"}
quote = "1.0"
regex = "1.5"
syn = {features = ["full", "fold", "extra-traits"], version = "1.0"}

[lib]
proc-macro = true
