[package]
name = "locustdb-serialization"
version = "0.2.1"
edition = "2021"
description = "Serialization formats used by LocustDB for peristent storage and client/server communication."
license-file = "../LICENSE"

[dependencies]
capnp = "0.19"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1"